css/main.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: column;
}

.grid-wrapper {
  background-color: #e8dfdf85;
  margin-bottom: 8px;
}

.game-panel {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
  border: 10px solid #b57575;
  padding: 20px;
}

.mine-display {
  color: red;
  background-color: black;
  width: 100%;
  display: flex;
  justify-content: space-between;
  font-size: 1.2rem;
  padding: 10px;
}

.reset,
.high-score {
  padding: 2px;
  font-size: 1.6rem;
  width: 50%;
}

.reset:hover,
.high-score:hover {
  cursor: pointer;
}

.timer-display {
  color: red;
  background-color: black;
  width: 100%;
  display: flex;
  justify-content: space-between;
  font-size: 1.2rem;
  padding: 10px;
}

.grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 2px;
  border: 10px solid #b57575;
  padding: 20px;
  cursor: pointer;

  -webkit-touch-callout: none; /* iOS */
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
}

.cell {
  border: 1px solid #f2e5e5;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: -5px 5px 4px -1px #b99c93;
  width: 30px;
  height: 30px;
}

#active-mine,
.mine {
  font-size: 1.6rem;
}

#active-mine {
  background-color: rgb(82, 0, 0, 70%);
  box-shadow: unset;
}

.mine {
  background-color: rgba(255, 0, 0, 70%);
}

.blank {
  background-color: rgba(184, 175, 175, 70%);
  box-shadow: unset;
}

.safe {
  background-color: rgba(0, 128, 0, 70%);
  box-shadow: unset;
}

.flag {
  background-color: rgba(0, 55, 128, 70%);
  box-shadow: unset;
}

.result-dialog,
.high-score-dialog {
  border: 3px solid #b57575;
  background-color: #fff9f2;
}

.high-score-dialog {
  padding-right: 50px;
}

.high-score-dialog > p:first-child {
  font-weight: bold;
}

.high-score-action-buttons {
  display: flex;
  justify-content: space-around;
}

.beginner-high-score,
.intermediate-high-score,
.expert-high-score {
  font-style: italic;
}

.new-high-score input[type="text"] {
  display: block;
  margin: 8px 0;
}

.levels button {
  border: 0;
  border-radius: 2px;
  padding: 9px 15px;
  background-color: white;
  box-shadow: -5px 5px 5px 0px #b99c93;
}
.levels button:hover {
  cursor: pointer;
  background-color: #b57575;
}

.levels button:active {
  transform: translate(-1px, 1px);
}

.how-to {
  margin-bottom: 3px;
}

.hidden {
  display: none;
}

/* level dimensions */
.beginner {
  width: 350px;
}

.intermediate {
  width: 600px;
}

.expert {
  width: 1024px;
}

